Change of Design

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,4 +3,5 @@
   --primary-color: #bb0823;
   --secondary-color: black;
   --text-primary: rgba(74, 74, 74, 1);
+  --text-secondary: rgba(137, 137, 137, 1);
 }
